Remove NOTIMPLEMENTED() in WebThreadImplForUtilityThread::Scheduler().

It's possible to reach here even if Scheduler() just returns nullptr.

Bug: 873207
Change-Id: I6664ccaa75fbcb31e4f9e75099d85404f8db8059
Reviewed-on: https://chromium-review.googlesource.com/1172178
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Commit-Queue: Yuta Kitamura <yutak@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582561}
Former-commit-id: 5e09e4f558cec243c4dce1e571d5095fa611d954