third_party/blink/renderer/platform/scheduler/utility/webthread_impl_for_utility_thread.cc
@@ -16,7 +16,6 @@ WebThreadImplForUtilityThread::WebThreadImplForUtilityThread()
 WebThreadImplForUtilityThread::~WebThreadImplForUtilityThread() = default;
 
 blink::ThreadScheduler* WebThreadImplForUtilityThread::Scheduler() const {
-  NOTIMPLEMENTED();
   return nullptr;
 }
 
